bin/testsuite/tests/compiler/src/errors/compiler3118.swg
#global testerror "Err0120"
struct AA {}

public func toto3118(x: [4] AA) {}
